src/rules/pycodestyle/snapshots/ruff__rules__pycodestyle__tests__W292_W292_0.py.snap
---
source: src/rules/pycodestyle/mod.rs
expression: diagnostics
---
- kind:
    NoNewLineAtEndOfFile: ~
  location:
    row: 2
    column: 8
  end_location:
    row: 2
    column: 8
  fix:
    content: "\n"
    location:
      row: 2
      column: 8
    end_location:
      row: 2
      column: 8
  parent: ~

